--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Alegreya+SC);
+body {display: none;
+
+}
 
 body{
 font-family: 'Alegreya SC', serif;
